--- a/album/templates/album/web/components/template_select.html
+++ b/album/templates/album/web/components/template_select.html
@@ -1,4 +1,7 @@
+{% load i18n %}
+{% load staticfiles %}
 
+<link rel="stylesheet" href="{% static 'base/common/lib/animate/animate.css' %}">
 <style>
     #templateSelect {
         position: absolute;
