--- a/album/templates/album/web/components/picture_edit.html
+++ b/album/templates/album/web/components/picture_edit.html
@@ -43,16 +43,17 @@
                     <div class="weui-uploader__hd d-none"><p class="weui-uploader__title">照片上传</p></div>
                     <div class="weui-uploader__bd">
                         <ul class="weui-uploader__files" id="uploaderCustomFiles">
-                            <li class="weui-uploader__file"
+                            <v-touch tag="li" class="weui-uploader__file"
                                 :data-seq="picture.seq"
-                                @click="displayPicture(picture)"
+                                v-on:tap.prevent="displayPicture(picture)"
+                                v-on:press.prevent="actionPicture(picture)"
                                 v-for="picture in pictureList">
                                 <div class="el w-100 h-100" :style="'background-image: url(' + picture.image + ');'" :data-id="picture.id"></div>
-                            </li>
+                            </v-touch>
                         </ul>
-                        <div class="weui-uploader__input-box"><input id="uploaderCustomInput"
-                                                                     class="weui-uploader__input" type="file"
-                                                                     accept="image/*" multiple=""></div>
+                        <div class="weui-uploader__input-box" v-if="pictureList.length < limit">
+                            <input id="uploaderCustomInput" class="weui-uploader__input" type="file" accept="image/*" multiple="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -85,6 +86,7 @@
                 pictureUploaderOption: {},
 
                 state: null,
+                limit: 8,
             },
             methods: {
                 getPictureSeq: function () {
@@ -96,18 +98,42 @@
                         }
                     });
                 },
+                deletePicture: function(picture, silent) {
+                    var vue = this;
+                    if (silent || confirm('确定删除该图片？')) {
+                        var pictureList = vue.pictureList;
+                        pictureList.splice(pictureList.indexOf(picture), 1);
+                        http.delete(context.albumPictureApiUrl.replace('0', vue.albumId), {
+                            picture__id: picture.id,
+                        }, function () {})
+                    }
+                },
                 displayPicture: function (picture) {
                     var vue = this;
                     var gallery = weui.gallery(picture.image, {
                         onDelete: function () {
-                            if (confirm('确定删除该图片？')) {
-                                var pictureList = vue.pictureList;
-                                pictureList.splice(pictureList.indexOf(picture), 1);
-                                http.delete(context.albumPictureApiUrl.replace('0', vue.albumId), {
-                                    picture__id: picture.id,
-                                }, function () {})
-                            }
+                            vue.deletePicture(picture);
                             gallery.hide();
+                        }
+                    });
+                },
+                actionPicture: function (picture) {
+                    var vue = this;
+                    weui.actionSheet([
+                        {
+                            label: '删除图片',
+                            onClick: function () {
+                                vue.deletePicture(picture, true);
+                            }
+                        }
+                    ], [
+                        {
+                            label: '取消',
+                            onClick: function () {
+                            }
+                        }
+                    ], {
+                        onClose: function(){
                         }
                     });
                 },
@@ -115,7 +141,6 @@
                     var vue = this;
                     vue.albumId = albumId;
                     vue.pictureList = pictureList;
-                    {#Vue.set(vue, 'pictureList', pictureList);#}
                     vue.getPictureSeq();
                     Vue.nextTick(function () {
                         vue.bindDragPictures();
@@ -256,6 +281,10 @@
                         // return true; // 阻止默认行为，不使用默认的成功态
                     },
                     onError: function (err) {
+                        var id = this.id;
+                        setTimeout(function () {
+                            $('#uploaderCustomFiles li[data-id=' + id + ']').remove();
+                        }, 1000)
                         // return true; // 阻止默认行为，不使用默认的失败态
                     }
                 })
